Revert "Update CSS等高布局.html"

--- a/CSS等高布局.html
+++ b/CSS等高布局.html
@@ -10,21 +10,21 @@
 		.container{
 			margin: 0 auto;
 			width: 500px;
-			overflow: hidden;
+			/*overflow: hidden;*/
 		}
 			.left{
 			background-color: #f0f0db;
 			float: left;
 			width: 30%;
-			padding-bottom: 2000px;
-			margin-bottom: -2000px;
+			/*padding-bottom: 2000px;
+			margin-bottom: -2000px;*/
 		}
 		.right{
 			background-color: #f0c0c0;
 			float: left;
 			width: 70%;
-			padding-bottom: 2000px;
-			margin-bottom: -2000px;
+		/*	padding-bottom: 2000px;
+			margin-bottom: -2000px;*/
 		}
 	</style>
 </head>
